--- a/nutripro/public/index.html
+++ b/nutripro/public/index.html
@@ -42,5 +42,12 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        offset: 400,
+        duration: 500,
+      });
+    </script>
   </body>
 </html>
